--- a/All.bib
+++ b/All.bib
@@ -6770,6 +6770,23 @@
 @Article{	  borodin.corwin.ea:15:spectral,
   author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
 		  Sasamoto, Tomohiro},
+  title		= {Spectral theory for the {$q$}-{B}oson particle system},
+  journal	= {Compos. Math.},
+  fjournal	= {Compositio Mathematica},
+  volume	= {151},
+  year		= {2015},
+  number	= {1},
+  pages		= {1--67},
+  issn		= {0010-437X},
+  mrclass	= {82B23 (05E05)},
+  mrnumber	= {3305308},
+  doi		= {10.1112/S0010437X14007532},
+  url		= {https://doi.org/10.1112/S0010437X14007532}
+}
+
+@Article{	  borodin.corwin.ea:15:spectral*1,
+  author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
+		  Sasamoto, Tomohiro},
   title		= {Spectral theory for interacting particle systems solvable
 		  by coordinate {B}ethe ansatz},
   journal	= {Comm. Math. Phys.},
@@ -6783,23 +6800,6 @@
   mrnumber	= {3385995},
   doi		= {10.1007/s00220-015-2424-7},
   url		= {https://doi.org/10.1007/s00220-015-2424-7}
-}
-
-@Article{	  borodin.corwin.ea:15:spectral*1,
-  author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
-		  Sasamoto, Tomohiro},
-  title		= {Spectral theory for the {$q$}-{B}oson particle system},
-  journal	= {Compos. Math.},
-  fjournal	= {Compositio Mathematica},
-  volume	= {151},
-  year		= {2015},
-  number	= {1},
-  pages		= {1--67},
-  issn		= {0010-437X},
-  mrclass	= {82B23 (05E05)},
-  mrnumber	= {3305308},
-  doi		= {10.1112/S0010437X14007532},
-  url		= {https://doi.org/10.1112/S0010437X14007532}
 }
 
 @Article{	  borodin.corwin.ea:16:observables,
@@ -6911,7 +6911,19 @@
   url		= {https://doi.org/10.1007/s11040-021-09380-8}
 }
 
-@Article{	  borodin.corwin:14:macdonald,
+@InCollection{	  borodin.corwin:14:macdonald,
+  author	= {Borodin, A. and Corwin, I.},
+  title		= {Macdonald processes},
+  booktitle	= {X{VII}th {I}nternational {C}ongress on {M}athematical
+		  {P}hysics},
+  pages		= {292--316},
+  publisher	= {World Sci. Publ., Hackensack, NJ},
+  year		= {2014},
+  mrclass	= {60K35 (60B99 82B23 82C22)},
+  mrnumber	= {3204480}
+}
+
+@Article{	  borodin.corwin:14:macdonald*1,
   author	= {Borodin, Alexei and Corwin, Ivan},
   title		= {Macdonald processes},
   journal	= {Probab. Theory Related Fields},
@@ -6926,18 +6938,6 @@
   mrreviewer	= {Rongfeng Sun},
   doi		= {10.1007/s00440-013-0482-3},
   url		= {https://doi.org/10.1007/s00440-013-0482-3}
-}
-
-@InCollection{	  borodin.corwin:14:macdonald*1,
-  author	= {Borodin, A. and Corwin, I.},
-  title		= {Macdonald processes},
-  booktitle	= {X{VII}th {I}nternational {C}ongress on {M}athematical
-		  {P}hysics},
-  pages		= {292--316},
-  publisher	= {World Sci. Publ., Hackensack, NJ},
-  year		= {2014},
-  mrclass	= {60K35 (60B99 82B23 82C22)},
-  mrnumber	= {3204480}
 }
 
 @Article{	  borodin.corwin:14:moments,
@@ -11725,23 +11725,7 @@
   url		= {https://doi.org/10.1016/S0167-7152(99)00163-7}
 }
 
-@InCollection{	  chen:00:on,
-  author	= {Chen, Xia},
-  title		= {On the law of the iterated logarithm for local times of
-		  recurrent random walks},
-  booktitle	= {High dimensional probability, {II} ({S}eattle, {WA},
-		  1999)},
-  series	= {Progr. Probab.},
-  volume	= {47},
-  pages		= {249--259},
-  publisher	= {Birkh\"{a}user Boston, Boston, MA},
-  year		= {2000},
-  mrclass	= {60F15 (60J55)},
-  mrnumber	= {1857326},
-  mrreviewer	= {Ingemar Kaj}
-}
-
-@Article{	  chen:00:on*1,
+@Article{	  chen:00:on,
   author	= {Chen, Xia},
   title		= {On the limit laws of the second order for additive
 		  functionals of {H}arris recurrent {M}arkov chains},
@@ -11756,6 +11740,22 @@
   mrnumber	= {1736591},
   doi		= {10.1007/PL00008724},
   url		= {https://doi.org/10.1007/PL00008724}
+}
+
+@InCollection{	  chen:00:on*1,
+  author	= {Chen, Xia},
+  title		= {On the law of the iterated logarithm for local times of
+		  recurrent random walks},
+  booktitle	= {High dimensional probability, {II} ({S}eattle, {WA},
+		  1999)},
+  series	= {Progr. Probab.},
+  volume	= {47},
+  pages		= {249--259},
+  publisher	= {Birkh\"{a}user Boston, Boston, MA},
+  year		= {2000},
+  mrclass	= {60F15 (60J55)},
+  mrnumber	= {1857326},
+  mrreviewer	= {Ingemar Kaj}
 }
 
 @Article{	  chen:01:exact,
@@ -26275,7 +26275,25 @@
   url		= {http://links.jstor.org/sici?sici=0162-1459(199406)89:426<368:AATSSM>2.0.CO;2-Z&origin=MSN}
 }
 
-@InCollection{	  hara.slade:00:scaling,
+@Article{	  hara.slade:00:scaling,
+  author	= {Hara, Takashi and Slade, Gordon},
+  title		= {The scaling limit of the incipient infinite cluster in
+		  high-dimensional percolation. {I}. {C}ritical exponents},
+  journal	= {J. Statist. Phys.},
+  fjournal	= {Journal of Statistical Physics},
+  volume	= {99},
+  year		= {2000},
+  number	= {5-6},
+  pages		= {1075--1168},
+  issn		= {0022-4715},
+  mrclass	= {82B43 (60K35)},
+  mrnumber	= {1773141},
+  mrreviewer	= {Remco van der Hofstad},
+  doi		= {10.1023/A:1018628503898},
+  url		= {https://doi.org/10.1023/A:1018628503898}
+}
+
+@InCollection{	  hara.slade:00:scaling*1,
   author	= {Hara, Takashi and Slade, Gordon},
   title		= {The scaling limit of the incipient infinite cluster in
 		  high-dimensional percolation. {II}. {I}ntegrated
@@ -26294,24 +26312,6 @@
   mrreviewer	= {Remco van der Hofstad},
   doi		= {10.1063/1.533186},
   url		= {https://doi.org/10.1063/1.533186}
-}
-
-@Article{	  hara.slade:00:scaling*1,
-  author	= {Hara, Takashi and Slade, Gordon},
-  title		= {The scaling limit of the incipient infinite cluster in
-		  high-dimensional percolation. {I}. {C}ritical exponents},
-  journal	= {J. Statist. Phys.},
-  fjournal	= {Journal of Statistical Physics},
-  volume	= {99},
-  year		= {2000},
-  number	= {5-6},
-  pages		= {1075--1168},
-  issn		= {0022-4715},
-  mrclass	= {82B43 (60K35)},
-  mrnumber	= {1773141},
-  mrreviewer	= {Remco van der Hofstad},
-  doi		= {10.1023/A:1018628503898},
-  url		= {https://doi.org/10.1023/A:1018628503898}
 }
 
 @Article{	  hara.slade:91:critical,
@@ -28686,6 +28686,26 @@
   url		= {https://doi.org/10.1155/2014/219876}
 }
 
+@Article{	  hu.salins.ea:19:large,
+  author	= {Hu, Wenqing and Salins, Michael and Spiliopoulos,
+		  Konstantinos},
+  title		= {Large deviations and averaging for systems of slow-fast
+		  stochastic reaction-diffusion equations},
+  journal	= {Stoch. Partial Differ. Equ. Anal. Comput.},
+  fjournal	= {Stochastic Partial Differential Equations. Analysis and
+		  Computations},
+  volume	= {7},
+  year		= {2019},
+  number	= {4},
+  pages		= {808--874},
+  issn		= {2194-0401},
+  mrclass	= {60H15 (35K57 35R60 60F10 70K70)},
+  mrnumber	= {4022288},
+  mrreviewer	= {Yong Liu},
+  doi		= {10.1007/s40072-019-00140-y},
+  url		= {https://doi.org/10.1007/s40072-019-00140-y}
+}
+
 @Article{	  hu.shi:09:minimal,
   author	= {Hu, Yueyun and Shi, Zhan},
   title		= {Minimal position and critical martingale convergence in
@@ -29752,25 +29772,6 @@
 @Article{	  huang.le.ea:17:large,
   author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
   title		= {Large time asymptotics for the parabolic {A}nderson model
-		  driven by space and time correlated noise},
-  journal	= {Stoch. Partial Differ. Equ. Anal. Comput.},
-  fjournal	= {Stochastic Partial Differential Equations. Analysis and
-		  Computations},
-  volume	= {5},
-  year		= {2017},
-  number	= {4},
-  pages		= {614--651},
-  issn		= {2194-0401},
-  mrclass	= {60G15 (35B40 35K15 35R60 60F10 60H07 60H15 65M75)},
-  mrnumber	= {3736656},
-  mrreviewer	= {Xia Chen},
-  doi		= {10.1007/s40072-017-0099-0},
-  url		= {https://doi.org/10.1007/s40072-017-0099-0}
-}
-
-@Article{	  huang.le.ea:17:large*1,
-  author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
-  title		= {Large time asymptotics for the parabolic {A}nderson model
 		  driven by spatially correlated noise},
   journal	= {Ann. Inst. Henri Poincar\'{e} Probab. Stat.},
   fjournal	= {Annales de l'Institut Henri Poincar\'{e} Probabilit\'{e}s
@@ -29785,6 +29786,25 @@
   mrreviewer	= {Xia Chen},
   doi		= {10.1214/16-AIHP756},
   url		= {https://doi.org/10.1214/16-AIHP756}
+}
+
+@Article{	  huang.le.ea:17:large*1,
+  author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
+  title		= {Large time asymptotics for the parabolic {A}nderson model
+		  driven by space and time correlated noise},
+  journal	= {Stoch. Partial Differ. Equ. Anal. Comput.},
+  fjournal	= {Stochastic Partial Differential Equations. Analysis and
+		  Computations},
+  volume	= {5},
+  year		= {2017},
+  number	= {4},
+  pages		= {614--651},
+  issn		= {2194-0401},
+  mrclass	= {60G15 (35B40 35K15 35R60 60F10 60H07 60H15 65M75)},
+  mrnumber	= {3736656},
+  mrreviewer	= {Xia Chen},
+  doi		= {10.1007/s40072-017-0099-0},
+  url		= {https://doi.org/10.1007/s40072-017-0099-0}
 }
 
 @Article{	  huang.le:19:spatial,
@@ -44834,6 +44854,43 @@
   url		= {https://doi.org/10.1007/BF00534964}
 }
 
+@Article{	  pajor-gyulai.salins:16:on,
+  author	= {Pajor-Gyulai, Zsolt and Salins, Michael},
+  title		= {On dynamical systems perturbed by a null-recurrent fast
+		  motion: the continuous coefficient case with independent
+		  driving noises},
+  journal	= {J. Theoret. Probab.},
+  fjournal	= {Journal of Theoretical Probability},
+  volume	= {29},
+  year		= {2016},
+  number	= {3},
+  pages		= {1083--1099},
+  issn		= {0894-9840},
+  mrclass	= {60H10 (60B10 60F05 60J60)},
+  mrnumber	= {3540491},
+  mrreviewer	= {Yong Chen},
+  doi		= {10.1007/s10959-015-0600-5},
+  url		= {https://doi.org/10.1007/s10959-015-0600-5}
+}
+
+@Article{	  pajor-gyulai.salins:17:on,
+  author	= {Pajor-Gyulai, Zs. and Salins, M.},
+  title		= {On dynamical systems perturbed by a null-recurrent motion:
+		  the general case},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {127},
+  year		= {2017},
+  number	= {6},
+  pages		= {1960--1997},
+  issn		= {0304-4149},
+  mrclass	= {60F05 (37H10 60F17 60H10 60J50 60J55)},
+  mrnumber	= {3646437},
+  mrreviewer	= {Paulo R. C. Ruffino},
+  doi		= {10.1016/j.spa.2016.09.009},
+  url		= {https://doi.org/10.1016/j.spa.2016.09.009}
+}
+
 @Article{	  pal.shkolnikov:14:concentration,
   author	= {Pal, Soumik and Shkolnikov, Mykhaylo},
   title		= {Concentration of measure for {B}rownian particle systems
@@ -45267,22 +45324,7 @@
   mrreviewer	= {Anton Wakolbinger}
 }
 
-@InCollection{	  perkins:82:local,
-  author	= {Perkins, Edwin},
-  title		= {Local time and pathwise uniqueness for stochastic
-		  differential equations},
-  booktitle	= {Seminar on {P}robability, {XVI}},
-  series	= {Lecture Notes in Math.},
-  volume	= {920},
-  pages		= {201--208},
-  publisher	= {Springer, Berlin-New York},
-  year		= {1982},
-  mrclass	= {60H10},
-  mrnumber	= {658680},
-  mrreviewer	= {Toshio Yamada}
-}
-
-@Article{	  perkins:82:local*1,
+@Article{	  perkins:82:local,
   author	= {Perkins, Edwin},
   title		= {Local time is a semimartingale},
   journal	= {Z. Wahrsch. Verw. Gebiete},
@@ -45298,6 +45340,21 @@
   mrreviewer	= {E. \c{C}inlar},
   doi		= {10.1007/BF01957098},
   url		= {https://doi.org/10.1007/BF01957098}
+}
+
+@InCollection{	  perkins:82:local*1,
+  author	= {Perkins, Edwin},
+  title		= {Local time and pathwise uniqueness for stochastic
+		  differential equations},
+  booktitle	= {Seminar on {P}robability, {XVI}},
+  series	= {Lecture Notes in Math.},
+  volume	= {920},
+  pages		= {201--208},
+  publisher	= {Springer, Berlin-New York},
+  year		= {1982},
+  mrclass	= {60H10},
+  mrnumber	= {658680},
+  mrreviewer	= {Toshio Yamada}
 }
 
 @Article{	  peszat.tindel:10:stochastic,
@@ -47965,6 +48022,146 @@
   url		= {https://doi.org/10.1007/s00028-022-00788-5}
 }
 
+@Article{	  salins.budhiraja.ea:19:uniform,
+  author	= {Salins, Michael and Budhiraja, Amarjit and Dupuis, Paul},
+  title		= {Uniform large deviation principles for {B}anach space
+		  valued stochastic evolution equations},
+  journal	= {Trans. Amer. Math. Soc.},
+  fjournal	= {Transactions of the American Mathematical Society},
+  volume	= {372},
+  year		= {2019},
+  number	= {12},
+  pages		= {8363--8421},
+  issn		= {0002-9947},
+  mrclass	= {60F10 (35R60 60H15)},
+  mrnumber	= {4029700},
+  mrreviewer	= {Stefano Bonaccorsi},
+  doi		= {10.1090/tran/7872},
+  url		= {https://doi.org/10.1090/tran/7872}
+}
+
+@Article{	  salins.spiliopoulos:17:markov,
+  author	= {Salins, Michael and Spiliopoulos, Konstantinos},
+  title		= {Markov processes with spatial delay: path space
+		  characterization, occupation time and properties},
+  journal	= {Stoch. Dyn.},
+  fjournal	= {Stochastics and Dynamics},
+  volume	= {17},
+  year		= {2017},
+  number	= {6},
+  pages		= {1750042, 21},
+  issn		= {0219-4937},
+  mrclass	= {60J60 (60G17 60H10 60J55 60J65)},
+  mrnumber	= {3685635},
+  doi		= {10.1142/S0219493717500423},
+  url		= {https://doi.org/10.1142/S0219493717500423}
+}
+
+@Article{	  salins.spiliopoulos:17:rare,
+  author	= {Salins, Michael and Spiliopoulos, Konstantinos},
+  title		= {Rare event simulation via importance sampling for linear
+		  {SPDE}'s},
+  journal	= {Stoch. Partial Differ. Equ. Anal. Comput.},
+  fjournal	= {Stochastic Partial Differential Equations. Analysis and
+		  Computations},
+  volume	= {5},
+  year		= {2017},
+  number	= {4},
+  pages		= {652--690},
+  issn		= {2194-0401},
+  mrclass	= {60H15 (35K20 35R60 60F10)},
+  mrnumber	= {3736657},
+  doi		= {10.1007/s40072-017-0100-y},
+  url		= {https://doi.org/10.1007/s40072-017-0100-y}
+}
+
+@Article{	  salins.spiliopoulos:21:metastability,
+  author	= {Salins, Michael and Spiliopoulos, Konstantinos},
+  title		= {Metastability and exit problems for systems of stochastic
+		  reaction-diffusion equations},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {49},
+  year		= {2021},
+  number	= {5},
+  pages		= {2317--2370},
+  issn		= {0091-1798},
+  mrclass	= {60F10 (35R60 60G40 60H15)},
+  mrnumber	= {4317706},
+  doi		= {10.1214/21-aop1509},
+  url		= {https://doi.org/10.1214/21-aop1509}
+}
+
+@Book{		  salins:15:asymptotic,
+  author	= {Salins, Michael},
+  title		= {Asymptotic problems for stochastic partial differential
+		  equations},
+  note		= {Thesis (Ph.D.)--University of Maryland, College Park},
+  publisher	= {ProQuest LLC, Ann Arbor, MI},
+  year		= {2015},
+  pages		= {141},
+  isbn		= {978-1321-88288-9},
+  mrclass	= {Thesis},
+  mrnumber	= {3407420},
+  url		= {http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&rft_val_fmt=info:ofi/fmt:kev:mtx:dissertation&res_dat=xri:pqm&rft_dat=xri:pqdiss:3711843}
+}
+
+@Article{	  salins:19:equivalences,
+  author	= {Salins, Michael},
+  title		= {Equivalences and counterexamples between several
+		  definitions of the uniform large deviations principle},
+  journal	= {Probab. Surv.},
+  fjournal	= {Probability Surveys},
+  volume	= {16},
+  year		= {2019},
+  pages		= {99--142},
+  mrclass	= {60F10 (60H15)},
+  mrnumber	= {3960292},
+  mrreviewer	= {Leila Setayeshgar},
+  doi		= {10.1214/18-PS309},
+  url		= {https://doi.org/10.1214/18-PS309}
+}
+
+@Article{	  salins:19:smoluchowski-kramers,
+  author	= {Salins, Michael},
+  title		= {Smoluchowski-{K}ramers approximation for the damped
+		  stochastic wave equation with multiplicative noise in any
+		  spatial dimension},
+  journal	= {Stoch. Partial Differ. Equ. Anal. Comput.},
+  fjournal	= {Stochastic Partial Differential Equations. Analysis and
+		  Computations},
+  volume	= {7},
+  year		= {2019},
+  number	= {1},
+  pages		= {86--122},
+  issn		= {2194-0401},
+  mrclass	= {60H15 (35L20 35L71 35R60)},
+  mrnumber	= {3916264},
+  mrreviewer	= {David Nualart},
+  doi		= {10.1007/s40072-018-0123-z},
+  url		= {https://doi.org/10.1007/s40072-018-0123-z}
+}
+
+@Article{	  salins:21:existence,
+  author	= {Salins, M.},
+  title		= {Existence and uniqueness for the mild solution of the
+		  stochastic heat equation with non-{L}ipschitz drift on an
+		  unbounded spatial domain},
+  journal	= {Stoch. Partial Differ. Equ. Anal. Comput.},
+  fjournal	= {Stochastic Partial Differential Equations. Analysis and
+		  Computations},
+  volume	= {9},
+  year		= {2021},
+  number	= {3},
+  pages		= {714--745},
+  issn		= {2194-0401},
+  mrclass	= {35R60},
+  mrnumber	= {4297238},
+  mrreviewer	= {Eszter Sikolya},
+  doi		= {10.1007/s40072-020-00182-7},
+  url		= {https://doi.org/10.1007/s40072-020-00182-7}
+}
+
 @Article{	  salins:21:global,
   title		= {Global solutions to the stochastic heat equation with
 		  superlinear accretive reaction term and superlinear
@@ -47976,7 +48173,58 @@
   url		= {https://www.arxiv.org/abs/2110.10130}
 }
 
+@Article{	  salins:21:systems,
+  author	= {Salins, M.},
+  title		= {Systems of small-noise stochastic reaction-diffusion
+		  equations satisfy a large deviations principle that is
+		  uniform over all initial data},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {142},
+  year		= {2021},
+  pages		= {159--194},
+  issn		= {0304-4149},
+  mrclass	= {60H15 (60F10)},
+  mrnumber	= {4314097},
+  doi		= {10.1016/j.spa.2021.08.010},
+  url		= {https://doi.org/10.1016/j.spa.2021.08.010}
+}
+
+@Article{	  salins:22:existence,
+  author	= {Salins, Michael},
+  title		= {Existence and uniqueness of global solutions to the
+		  stochastic heat equation with superlinear drift on an
+		  unbounded spatial domain},
+  journal	= {Stoch. Dyn.},
+  fjournal	= {Stochastics and Dynamics},
+  volume	= {22},
+  year		= {2022},
+  number	= {5},
+  pages		= {Paper No. 2250014, 30},
+  issn		= {0219-4937},
+  mrclass	= {35R60 (60H15)},
+  mrnumber	= {4486234},
+  doi		= {10.1142/S0219493722500149},
+  url		= {https://doi.org/10.1142/S0219493722500149}
+}
+
 @Article{	  salins:22:global,
+  author	= {Salins, Michael},
+  title		= {Global solutions for the stochastic reaction-diffusion
+		  equation with super-linear multiplicative noise and strong
+		  dissipativity},
+  journal	= {Electron. J. Probab.},
+  fjournal	= {Electronic Journal of Probability},
+  volume	= {27},
+  year		= {2022},
+  pages		= {Paper No. 12, 17},
+  mrclass	= {60H15 (35R60)},
+  mrnumber	= {4372099},
+  doi		= {10.1214/22-ejp740},
+  url		= {https://doi.org/10.1214/22-ejp740}
+}
+
+@Article{	  salins:22:global*1,
   author	= {Salins, Michael},
   title		= {Global solutions to the stochastic reaction-diffusion
 		  equation with superlinear accretive reaction term and
